在出现错误的情况下触发丢包记录

--- a/Pings.csproj
+++ b/Pings.csproj
@@ -28,6 +28,8 @@
     <NeutralLanguage>zh-CN</NeutralLanguage>
     <SignAssembly>False</SignAssembly>
     <ErrorReport>none</ErrorReport>
+	<IlcGenerateMstatFile>true</IlcGenerateMstatFile>
+	<IlcGenerateDgmlFile>true</IlcGenerateDgmlFile>
   </PropertyGroup>
 
   <ItemGroup>
