--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 9
 
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v3.0.0
