--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install GitVersion
       uses: gittools/actions/gitversion/setup@v3.0.0
       with:
-        versionSpec: '6.1.0'
+        versionSpec: '6.0.x'
 
     - name: Determine Version
       uses: gittools/actions/gitversion/execute@v3.0.0
